compiler/testData/multiplatform/simpleNoImplKeywordOnTopLevelFunction/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/simpleNoImplKeywordOnTopLevelFunction/jvm.kt:3:1: error: declaration should be marked with 'actual' (suppress with -Xno-check-actual)
fun foo(s: String): Array<CharSequence?> = arrayOf(s)
^
